# gramps-mcp

./: .env.example  .gitignore  README.md  openapi.json  pyproject.toml
src/gramps_mcp/: __init__.py  auth.py  client.py  config.py  models.py  server.py
src/gramps_mcp/tools/: __init__.py  analysis.py  convenience.py  create.py  delete.py  read.py  search.py  tags.py  update.py
